parserr/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    Comment
    reserved

Grammar

Rule 0     S' -> program
Rule 1     program -> list
Rule 2     list -> list declaration
Rule 3     list -> declaration
Rule 4     declaration -> function
Rule 5     declaration -> varDeclaration
Rule 6     varDeclaration -> type variableList Semicolon
Rule 7     ScopedVariableDec -> scopedSpecifier variableList Semicolon
Rule 8     variableList -> variableList Comma varInitialization
Rule 9     variableList -> varInitialization
Rule 10    varInitialization -> varForm
Rule 11    varInitialization -> varForm Colon Opening_Parentheses eachExpression Closing_Parentheses
Rule 12    varForm -> VarName Opening_Bracket Num Closing_Bracket
Rule 13    varForm -> VarName
Rule 14    scopedSpecifier -> Static_KW type
Rule 15    scopedSpecifier -> type
Rule 16    type -> Boolean_KW
Rule 17    type -> Character_KW
Rule 18    type -> Integer_KW
Rule 19    type -> char_KW
Rule 20    type -> bool_KW
Rule 21    type -> int_KW
Rule 22    nameOfMethod -> MethName
Rule 23    nameOfMethod -> VarName
Rule 24    function -> void_KW nameOfMethod Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace
Rule 25    function -> type VarName Opening_Parentheses parameter Closing_Parentheses statement
Rule 26    parameter -> listOfParameters
Rule 27    parameter -> <empty>
Rule 28    listOfParameters -> listOfParameters Semicolon paramTypeList
Rule 29    listOfParameters -> paramTypeList
Rule 30    paramTypeList -> type paramList
Rule 31    paramList -> paramList Comma paramId
Rule 32    paramList -> paramId
Rule 33    localDeclarations -> localDeclarations ScopedVariableDec
Rule 34    localDeclarations -> <empty>
Rule 35    paramId -> VarName
Rule 36    paramId -> VarName Opening_Bracket Closing_Bracket
Rule 37    statement -> phrase
Rule 38    statement -> compoundPhrase
Rule 39    statement -> selectPhrase
Rule 40    statement -> iterationPhrase
Rule 41    statement -> returnPhrase
Rule 42    statement -> continue
Rule 43    compoundPhrase -> Opening_Brace localDeclarations statementList Closing_Brace
Rule 44    statementList -> statementList statement
Rule 45    statementList -> <empty>
Rule 46    phrase -> allExpression Semicolon
Rule 47    phrase -> Semicolon
Rule 48    selectPhrase -> If_KW Opening_Parentheses eachExpression Closing_Parentheses ifBody
Rule 49    selectPhrase -> If_KW Opening_Parentheses eachExpression Closing_Parentheses Opening_Brace ifBody ifBody Closing_Brace
Rule 50    ifBody -> statement
Rule 51    ifBody -> statement Other_KW statement
Rule 52    iterationPhrase -> Till_KW Opening_Parentheses eachExpression Closing_Parentheses statement
Rule 53    returnPhrase -> ComeBack_KW Semicolon
Rule 54    returnPhrase -> GiveBack_KW allExpression Semicolon
Rule 55    continue -> Continue_KW Semicolon
Rule 56    allExpression -> alterable mathOp allExpression
Rule 57    allExpression -> alterable PP
Rule 58    allExpression -> alterable MM
Rule 59    allExpression -> eachExpression
Rule 60    mathOp -> Equal
Rule 61    mathOp -> PlusEqual
Rule 62    mathOp -> MinusEqual
Rule 63    mathOp -> TimesEqual
Rule 64    mathOp -> DivideEqual
Rule 65    eachExpression -> eachExpression DoubleAnd eachExpression
Rule 66    eachExpression -> eachExpression DoubleOr eachExpression
Rule 67    eachExpression -> eachExpression Tilda eachExpression
Rule 68    eachExpression -> eachExpression And eachExpression
Rule 69    eachExpression -> eachExpression Or eachExpression
Rule 70    eachExpression -> eachExpression DoubleAnd Then_KW eachExpression
Rule 71    eachExpression -> eachExpression DoubleOr Then_KW eachExpression
Rule 72    eachExpression -> eachExpression Tilda Then_KW eachExpression
Rule 73    eachExpression -> eachExpression And Then_KW eachExpression
Rule 74    eachExpression -> eachExpression Or Then_KW eachExpression
Rule 75    eachExpression -> DoubleAnd eachExpression
Rule 76    eachExpression -> DoubleOr eachExpression
Rule 77    eachExpression -> Tilda eachExpression
Rule 78    eachExpression -> And eachExpression
Rule 79    eachExpression -> Or eachExpression
Rule 80    eachExpression -> relExpression
Rule 81    eachExpression -> eachExpression Or Else_KW eachExpression
Rule 82    eachExpression -> eachExpression And Else_KW eachExpression
Rule 83    eachExpression -> eachExpression Tilda Else_KW eachExpression
Rule 84    eachExpression -> eachExpression DoubleOr Else_KW eachExpression
Rule 85    eachExpression -> eachExpression DoubleAnd Else_KW eachExpression
Rule 86    relExpression -> mathEXP compareType mathEXP
Rule 87    relExpression -> mathEXP
Rule 88    compareType -> equal
Rule 89    compareType -> nonEqual
Rule 90    equal -> LEqual
Rule 91    equal -> GEqual
Rule 92    equal -> EEqual
Rule 93    nonEqual -> GreaterOP
Rule 94    nonEqual -> LessOP
Rule 95    nonEqual -> NonEqualOP
Rule 96    mathEXP -> mathEXP Plus mathEXP
Rule 97    mathEXP -> mathEXP Minus mathEXP
Rule 98    mathEXP -> mathEXP Times mathEXP
Rule 99    mathEXP -> mathEXP Divide mathEXP
Rule 100   mathEXP -> mathEXP ModeOP mathEXP
Rule 101   mathEXP -> unaryExpression
Rule 102   unaryExpression -> unaryop unaryExpression
Rule 103   unaryExpression -> factor
Rule 104   unaryop -> Minus
Rule 105   unaryop -> Times
Rule 106   unaryop -> QMark
Rule 107   factor -> inalterable
Rule 108   factor -> alterable
Rule 109   alterable -> VarName
Rule 110   alterable -> alterable Opening_Bracket allExpression Closing_Bracket
Rule 111   alterable -> alterable Dot VarName
Rule 112   inalterable -> Opening_Parentheses allExpression Closing_Parentheses
Rule 113   inalterable -> constant
Rule 114   inalterable -> VarName Opening_Parentheses args Closing_Parentheses
Rule 115   args -> arguments
Rule 116   args -> <empty>
Rule 117   arguments -> arguments Comma allExpression
Rule 118   arguments -> allExpression
Rule 119   constant -> Const_KW
Rule 120   constant -> True_KW
Rule 121   constant -> False_KW

Terminals, with rules where they appear

And                  : 68 73 78 82
Boolean_KW           : 16
Character_KW         : 17
Closing_Brace        : 24 43 49
Closing_Bracket      : 12 36 110
Closing_Parentheses  : 11 24 25 48 49 52 112 114
Colon                : 11
ComeBack_KW          : 53
Comma                : 8 31 117
Comment              : 
Const_KW             : 119
Continue_KW          : 55
Divide               : 99
DivideEqual          : 64
Dot                  : 111
DoubleAnd            : 65 70 75 85
DoubleOr             : 66 71 76 84
EEqual               : 92
Else_KW              : 81 82 83 84 85
Equal                : 60
False_KW             : 121
GEqual               : 91
GiveBack_KW          : 54
GreaterOP            : 93
If_KW                : 48 49
Integer_KW           : 18
LEqual               : 90
LessOP               : 94
MM                   : 58
MethName             : 22
Minus                : 97 104
MinusEqual           : 62
ModeOP               : 100
NonEqualOP           : 95
Num                  : 12
Opening_Brace        : 24 43 49
Opening_Bracket      : 12 36 110
Opening_Parentheses  : 11 24 25 48 49 52 112 114
Or                   : 69 74 79 81
Other_KW             : 51
PP                   : 57
Plus                 : 96
PlusEqual            : 61
QMark                : 106
Semicolon            : 6 7 28 46 47 53 54 55
Static_KW            : 14
Then_KW              : 70 71 72 73 74
Tilda                : 67 72 77 83
Till_KW              : 52
Times                : 98 105
TimesEqual           : 63
True_KW              : 120
VarName              : 12 13 23 25 35 36 109 111 114
bool_KW              : 20
char_KW              : 19
error                : 
int_KW               : 21
reserved             : 
void_KW              : 24

Nonterminals, with rules where they appear

ScopedVariableDec    : 33
allExpression        : 46 54 56 110 112 117 118
alterable            : 56 57 58 108 110 111
args                 : 114
arguments            : 115 117
compareType          : 86
compoundPhrase       : 38
constant             : 113
continue             : 42
declaration          : 2 3
eachExpression       : 11 48 49 52 59 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 76 77 78 79 81 81 82 82 83 83 84 84 85 85
equal                : 88
factor               : 103
function             : 4
ifBody               : 48 49 49
inalterable          : 107
iterationPhrase      : 40
list                 : 1 2
listOfParameters     : 26 28
localDeclarations    : 33 43
mathEXP              : 86 86 87 96 96 97 97 98 98 99 99 100 100
mathOp               : 56
nameOfMethod         : 24
nonEqual             : 89
paramId              : 31 32
paramList            : 30 31
paramTypeList        : 28 29
parameter            : 24 25
phrase               : 37
program              : 0
relExpression        : 80
returnPhrase         : 41
scopedSpecifier      : 7
selectPhrase         : 39
statement            : 24 25 44 50 51 51 52
statementList        : 43 44
type                 : 6 14 15 25 30
unaryExpression      : 101 102
unaryop              : 102
varDeclaration       : 5
varForm              : 10 11
varInitialization    : 8 9
variableList         : 6 7 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . list
    (2) list -> . list declaration
    (3) list -> . declaration
    (4) declaration -> . function
    (5) declaration -> . varDeclaration
    (24) function -> . void_KW nameOfMethod Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace
    (25) function -> . type VarName Opening_Parentheses parameter Closing_Parentheses statement
    (6) varDeclaration -> . type variableList Semicolon
    (16) type -> . Boolean_KW
    (17) type -> . Character_KW
    (18) type -> . Integer_KW
    (19) type -> . char_KW
    (20) type -> . bool_KW
    (21) type -> . int_KW

    void_KW         shift and go to state 6
    Boolean_KW      shift and go to state 8
    Character_KW    shift and go to state 9
    Integer_KW      shift and go to state 10
    char_KW         shift and go to state 11
    bool_KW         shift and go to state 12
    int_KW          shift and go to state 13

    program                        shift and go to state 1
    list                           shift and go to state 2
    declaration                    shift and go to state 3
    function                       shift and go to state 4
    varDeclaration                 shift and go to state 5
    type                           shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> list .
    (2) list -> list . declaration
    (4) declaration -> . function
    (5) declaration -> . varDeclaration
    (24) function -> . void_KW nameOfMethod Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace
    (25) function -> . type VarName Opening_Parentheses parameter Closing_Parentheses statement
    (6) varDeclaration -> . type variableList Semicolon
    (16) type -> . Boolean_KW
    (17) type -> . Character_KW
    (18) type -> . Integer_KW
    (19) type -> . char_KW
    (20) type -> . bool_KW
    (21) type -> . int_KW

    $end            reduce using rule 1 (program -> list .)
    void_KW         shift and go to state 6
    Boolean_KW      shift and go to state 8
    Character_KW    shift and go to state 9
    Integer_KW      shift and go to state 10
    char_KW         shift and go to state 11
    bool_KW         shift and go to state 12
    int_KW          shift and go to state 13

    declaration                    shift and go to state 14
    function                       shift and go to state 4
    varDeclaration                 shift and go to state 5
    type                           shift and go to state 7

state 3

    (3) list -> declaration .

    void_KW         reduce using rule 3 (list -> declaration .)
    Boolean_KW      reduce using rule 3 (list -> declaration .)
    Character_KW    reduce using rule 3 (list -> declaration .)
    Integer_KW      reduce using rule 3 (list -> declaration .)
    char_KW         reduce using rule 3 (list -> declaration .)
    bool_KW         reduce using rule 3 (list -> declaration .)
    int_KW          reduce using rule 3 (list -> declaration .)
    $end            reduce using rule 3 (list -> declaration .)


state 4

    (4) declaration -> function .

    void_KW         reduce using rule 4 (declaration -> function .)
    Boolean_KW      reduce using rule 4 (declaration -> function .)
    Character_KW    reduce using rule 4 (declaration -> function .)
    Integer_KW      reduce using rule 4 (declaration -> function .)
    char_KW         reduce using rule 4 (declaration -> function .)
    bool_KW         reduce using rule 4 (declaration -> function .)
    int_KW          reduce using rule 4 (declaration -> function .)
    $end            reduce using rule 4 (declaration -> function .)


state 5

    (5) declaration -> varDeclaration .

    void_KW         reduce using rule 5 (declaration -> varDeclaration .)
    Boolean_KW      reduce using rule 5 (declaration -> varDeclaration .)
    Character_KW    reduce using rule 5 (declaration -> varDeclaration .)
    Integer_KW      reduce using rule 5 (declaration -> varDeclaration .)
    char_KW         reduce using rule 5 (declaration -> varDeclaration .)
    bool_KW         reduce using rule 5 (declaration -> varDeclaration .)
    int_KW          reduce using rule 5 (declaration -> varDeclaration .)
    $end            reduce using rule 5 (declaration -> varDeclaration .)


state 6

    (24) function -> void_KW . nameOfMethod Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace
    (22) nameOfMethod -> . MethName
    (23) nameOfMethod -> . VarName

    MethName        shift and go to state 16
    VarName         shift and go to state 17

    nameOfMethod                   shift and go to state 15

state 7

    (25) function -> type . VarName Opening_Parentheses parameter Closing_Parentheses statement
    (6) varDeclaration -> type . variableList Semicolon
    (8) variableList -> . variableList Comma varInitialization
    (9) variableList -> . varInitialization
    (10) varInitialization -> . varForm
    (11) varInitialization -> . varForm Colon Opening_Parentheses eachExpression Closing_Parentheses
    (12) varForm -> . VarName Opening_Bracket Num Closing_Bracket
    (13) varForm -> . VarName

    VarName         shift and go to state 18

    variableList                   shift and go to state 19
    varInitialization              shift and go to state 20
    varForm                        shift and go to state 21

state 8

    (16) type -> Boolean_KW .

    VarName         reduce using rule 16 (type -> Boolean_KW .)


state 9

    (17) type -> Character_KW .

    VarName         reduce using rule 17 (type -> Character_KW .)


state 10

    (18) type -> Integer_KW .

    VarName         reduce using rule 18 (type -> Integer_KW .)


state 11

    (19) type -> char_KW .

    VarName         reduce using rule 19 (type -> char_KW .)


state 12

    (20) type -> bool_KW .

    VarName         reduce using rule 20 (type -> bool_KW .)


state 13

    (21) type -> int_KW .

    VarName         reduce using rule 21 (type -> int_KW .)


state 14

    (2) list -> list declaration .

    void_KW         reduce using rule 2 (list -> list declaration .)
    Boolean_KW      reduce using rule 2 (list -> list declaration .)
    Character_KW    reduce using rule 2 (list -> list declaration .)
    Integer_KW      reduce using rule 2 (list -> list declaration .)
    char_KW         reduce using rule 2 (list -> list declaration .)
    bool_KW         reduce using rule 2 (list -> list declaration .)
    int_KW          reduce using rule 2 (list -> list declaration .)
    $end            reduce using rule 2 (list -> list declaration .)


state 15

    (24) function -> void_KW nameOfMethod . Opening_Parentheses parameter Closing_Parentheses Opening_Brace statement Closing_Brace

    Opening_Parentheses shift and go to state 22


state 16

    (22) nameOfMethod -> MethName .

    Opening_Parentheses reduce using rule 22 (nameOfMethod -> MethName .)


state 17

    (23) nameOfMethod -> VarName .

    Opening_Parentheses reduce using rule 23 (nameOfMethod -> VarName .)


state 18

    (25) function -> type VarName . Opening_Parentheses parameter Closing_Parentheses statement
    (12) varForm -> VarName . Opening_Bracket Num Closing_Bracket
    (13) varForm -> VarName .

    Opening_Parentheses shift and go to state 23
    Opening_Bracket shift and go to state 24
    Colon           reduce using rule 13 (varForm -> VarName .)
    Semicolon       reduce using rule 13 (varForm -> VarName .)
    Comma           reduce using rule 13 (varForm -> VarName .)


state 19

    (6) varDeclaration -> type variableList . Semicolon
    (8) variableList -> variableList . Comma varInitialization

    Semicolon       shift and go to state 25
    Comma           shift and go to state 26


state 20

    (9) variableList -> varInitialization .

    Semicolon       reduce using rule 9 (variableList -> varInitialization .)
    Comma           reduce using rule 9 (variableList -> varInitialization .)


state 21

    (10) varInitialization -> varForm .
    (11) varInitialization -> varForm . Colon Opening_Parentheses eachExpression Closing_Parentheses

    Semicolon       reduce using rule 10 (varInitialization -> varForm .)
    Comma           reduce using rule 10 (varInitialization -> varForm .)
    Colon           shift and go to state 27


state 22

    (24) function -> void_KW nameOfMethod Opening_Parentheses . parameter Closing_Parentheses Opening_Brace statement Closing_Brace
    (26) parameter -> . listOfParameters
    (27) parameter -> .
    (28) listOfParameters -> . listOfParameters Semicolon paramTypeList
    (29) listOfParameters -> . paramTypeList
    (30) paramTypeList -> . type paramList
    (16) type -> . Boolean_KW
    (17) type -> . Character_KW
    (18) type -> . Integer_KW
    (19) type -> . char_KW
    (20) type -> . bool_KW
    (21) type -> . int_KW

    Closing_Parentheses reduce using rule 27 (parameter -> .)
    Boolean_KW      shift and go to state 8
    Character_KW    shift and go to state 9
    Integer_KW      shift and go to state 10
    char_KW         shift and go to state 11
    bool_KW         shift and go to state 12
    int_KW          shift and go to state 13

    parameter                      shift and go to state 28
    listOfParameters               shift and go to state 29
    paramTypeList                  shift and go to state 30
    type                           shift and go to state 31

state 23

    (25) function -> type VarName Opening_Parentheses . parameter Closing_Parentheses statement
    (26) parameter -> . listOfParameters
    (27) parameter -> .
    (28) listOfParameters -> . listOfParameters Semicolon paramTypeList
    (29) listOfParameters -> . paramTypeList
    (30) paramTypeList -> . type paramList
    (16) type -> . Boolean_KW
    (17) type -> . Character_KW
    (18) type -> . Integer_KW
    (19) type -> . char_KW
    (20) type -> . bool_KW
    (21) type -> . int_KW

    Closing_Parentheses reduce using rule 27 (parameter -> .)
    Boolean_KW      shift and go to state 8
    Character_KW    shift and go to state 9
    Integer_KW      shift and go to state 10
    char_KW         shift and go to state 11
    bool_KW         shift and go to state 12
    int_KW          shift and go to state 13

    type                           shift and go to state 31
    parameter                      shift and go to state 32
    listOfParameters               shift and go to state 29
    paramTypeList                  shift and go to state 30

state 24

    (12) varForm -> VarName Opening_Bracket . Num Closing_Bracket

    Num             shift and go to state 33


state 25

    (6) varDeclaration -> type variableList Semicolon .

    void_KW         reduce using rule 6 (varDeclaration -> type variableList Semicolon .)
    Boolean_KW      reduce using rule 6 (varDeclaration -> type variableList Semicolon .)
    Character_KW    reduce using rule 6 (varDeclaration -> type variableList Semicolon .)
    Integer_KW      reduce using rule 6 (varDeclaration -> type variableList Semicolon .)
    char_KW         reduce using rule 6 (varDeclaration -> type variableList Semicolon .)
    bool_KW         reduce using rule 6 (varDeclaration -> type variableList Semicolon .)
    int_KW          reduce using rule 6 (varDeclaration -> type variableList Semicolon .)
    $end            reduce using rule 6 (varDeclaration -> type variableList Semicolon .)


state 26

    (8) variableList -> variableList Comma . varInitialization
    (10) varInitialization -> . varForm
    (11) varInitialization -> . varForm Colon Opening_Parentheses eachExpression Closing_Parentheses
    (12) varForm -> . VarName Opening_Bracket Num Closing_Bracket
    (13) varForm -> . VarName

    VarName         shift and go to state 35

    varInitialization              shift and go to state 34
    varForm                        shift and go to state 21

state 27

    (11) varInitialization -> varForm Colon . Opening_Parentheses eachExpression Closing_Parentheses

    Opening_Parentheses shift and go to state 36


state 28

    (24) function -> void_KW nameOfMethod Opening_Parentheses parameter . Closing_Parentheses Opening_Brace statement Closing_Brace

    Closing_Parentheses shift and go to state 37


state 29

    (26) parameter -> listOfParameters .
    (28) listOfParameters -> listOfParameters . Semicolon paramTypeList

    Closing_Parentheses reduce using rule 26 (parameter -> listOfParameters .)
    Semicolon       shift and go to state 38


state 30

    (29) listOfParameters -> paramTypeList .

    Semicolon       reduce using rule 29 (listOfParameters -> paramTypeList .)
    Closing_Parentheses reduce using rule 29 (listOfParameters -> paramTypeList .)


state 31

    (30) paramTypeList -> type . paramList
    (31) paramList -> . paramList Comma paramId
    (32) paramList -> . paramId
    (35) paramId -> . VarName
    (36) paramId -> . VarName Opening_Bracket Closing_Bracket

    VarName         shift and go to state 41

    paramList                      shift and go to state 39
    paramId                        shift and go to state 40

state 32

    (25) function -> type VarName Opening_Parentheses parameter . Closing_Parentheses statement

    Closing_Parentheses shift and go to state 42


state 33

    (12) varForm -> VarName Opening_Bracket Num . Closing_Bracket

    Closing_Bracket shift and go to state 43


state 34

    (8) variableList -> variableList Comma varInitialization .

    Semicolon       reduce using rule 8 (variableList -> variableList Comma varInitialization .)
    Comma           reduce using rule 8 (variableList -> variableList Comma varInitialization .)


state 35

    (12) varForm -> VarName . Opening_Bracket Num Closing_Bracket
    (13) varForm -> VarName .

    Opening_Bracket shift and go to state 24
    Colon           reduce using rule 13 (varForm -> VarName .)
    Semicolon       reduce using rule 13 (varForm -> VarName .)
    Comma           reduce using rule 13 (varForm -> VarName .)


state 36

    (11) varInitialization -> varForm Colon Opening_Parentheses . eachExpression Closing_Parentheses
    (65) eachExpression -> . eachExpression DoubleAnd eachExpression
    (66) eachExpression -> . eachExpression DoubleOr eachExpression
    (67) eachExpression -> . eachExpression Tilda eachExpression
    (68) eachExpression -> . eachExpression And eachExpression
    (69) eachExpression -> . eachExpression Or eachExpression
    (70) eachExpression -> . eachExpression DoubleAnd Then_KW eachExpression
    (71) eachExpression -> . eachExpression DoubleOr Then_KW eachExpression
    (72) eachExpression -> . eachExpression Tilda Then_KW eachExpression
    (73) eachExpression -> . eachExpression And Then_KW eachExpression
    (74) eachExpression -> . eachExpression Or Then_KW eachExpression
    (75) eachExpression -> . DoubleAnd eachExpression
    (76) eachExpression -> . DoubleOr eachExpression
    (77) eachExpression -> . Tilda eachExpression
    (78) eachExpression -> . And eachExpression
    (79) eachExpression -> . Or eachExpression
    (80) eachExpression -> . relExpression
    (81) eachExpression -> . eachExpression Or Else_KW eachExpression
    (82) eachExpression -> . eachExpression And Else_KW eachExpression
    (83) eachExpression -> . eachExpression Tilda Else_KW eachExpression
    (84) eachExpression -> . eachExpression DoubleOr Else_KW eachExpression
    (85) eachExpression -> . eachExpression DoubleAnd Else_KW eachExpression
    (86) relExpression -> . mathEXP compareType mathEXP
    (87) relExpression -> . mathEXP
    (96) mathEXP -> . mathEXP Plus mathEXP
    (97) mathEXP -> . mathEXP Minus mathEXP
    (98) mathEXP -> . mathEXP Times mathEXP
    (99) mathEXP -> . mathEXP Divide mathEXP
    (100) mathEXP -> . mathEXP ModeOP mathEXP
    (101) mathEXP -> . unaryExpression
    (102) unaryExpression -> . unaryop unaryExpression
    (103) unaryExpression -> . factor
    (104) unaryop -> . Minus
    (105) unaryop -> . Times
    (106) unaryop -> . QMark
    (107) factor -> . inalterable
    (108) factor -> . alterable
    (112) inalterable -> . Opening_Parentheses allExpression Closing_Parentheses
    (113) inalterable -> . constant
    (114) inalterable -> . VarName Opening_Parentheses args Closing_Parentheses
    (109) alterable -> . VarName
    (110) alterable -> . alterable Opening_Bracket allExpression Closing_Bracket
    (111) alterable -> . alterable Dot VarName
    (119) constant -> . Const_KW
    (120) constant -> . True_KW
    (121) constant -> . False_KW

    DoubleAnd       shift and go to state 46
    DoubleOr        shift and go to state 47
    Tilda           shift and go to state 48
    And             shift and go to state 49
    Or              shift and go to state 50
    Minus           shift and go to state 53
    Times           shift and go to state 54
    QMark           shift and go to state 58
    Opening_Parentheses shift and go to state 44
    VarName         shift and go to state 62
    Const_KW        shift and go to state 63
    True_KW         shift and go to state 64
    False_KW        shift and go to state 65

    eachExpression                 shift and go to state 45
    relExpression                  shift and go to state 51
    mathEXP                        shift and go to state 52
    unaryExpression                shift and go to state 55
    unaryop                        shift and go to state 56
    factor                         shift and go to state 57
    inalterable                    shift and go to state 59
    alterable                      shift and go to state 60
    constant                       shift and go to state 61

state 37

    (24) function -> void_KW nameOfMethod Opening_Parentheses parameter Closing_Parentheses . Opening_Brace statement Closing_Brace

    Opening_Brace   shift and go to state 66


state 38

    (28) listOfParameters -> listOfParameters Semicolon . paramTypeList
    (30) paramTypeList -> . type paramList
    (16) type -> . Boolean_KW
    (17) type -> . Character_KW
    (18) type -> . Integer_KW
    (19) type -> . char_KW
    (20) type -> . bool_KW
    (21) type -> . int_KW

    Boolean_KW      shift and go to state 8
    Character_KW    shift and go to state 9
    Integer_KW      shift and go to state 10
    char_KW         shift and go to state 11
    bool_KW         shift and go to state 12
    int_KW          shift and go to state 13

    paramTypeList                  shift and go to state 67
    type                           shift and go to state 31

state 39

    (30) paramTypeList -> type paramList .
    (31) paramList -> paramList . Comma paramId

    Semicolon       reduce using rule 30 (paramTypeList -> type paramList .)
    Closing_Parentheses reduce using rule 30 (paramTypeList -> type paramList .)
    Comma           shift and go to state 68


state 40

    (32) paramList -> paramId .

    Comma           reduce using rule 32 (paramList -> paramId .)
    Semicolon       reduce using rule 32 (paramList -> paramId .)
    Closing_Parentheses reduce using rule 32 (paramList -> paramId .)


state 41

    (35) paramId -> VarName .
    (36) paramId -> VarName . Opening_Bracket Closing_Bracket

    Comma           reduce using rule 35 (paramId -> VarName .)
    Semicolon       reduce using rule 35 (paramId -> VarName .)
    Closing_Parentheses reduce using rule 35 (paramId -> VarName .)
    Opening_Bracket shift and go to state 69


state 42
